# Mito-Forge

./: .gitignore  BUGFIX_LOG.md  CHANGELOG.md  LICENSE  README.md  TECHNICAL_DETAILS.md  install_linux.sh  pyproject.toml  pytest.ini  test_agent_tdd.py
.github/workflows/: ci.yml
data/: ingest_data.py  test_ingest_tool.py
data/tool/: FLye使用说明.md  FastQC使用说明.md  Flye_README.md  PMAT_README.md  SPAdes_README.md  SPAdes使用说明.txt
docs/: TECHNICAL_DETAILS.md  architecture.md  cli_commands_reference.md  installation.md  langgraph_architecture.md  mitochondrial_assembly_guide.md  model_configuration_guide.md  polishing_guide.md  quickstart.md  unimplemented_modules.md
examples/: cli_usage.md  langgraph_demo.py  model_config_example.yaml  model_main_config_example.yaml  test_unified_provider.py  your_main_config.yaml  your_model_config.yaml
mito_forge/: __init__.py  __main__.py
mito_forge/cli/: __init__.py  main.py  main_menu_refactored.py
mito_forge/cli/commands/: __init__.py  agents.py  annotate.py  assembly.py  config.py  doctor.py  model.py  pipeline.py  qc.py  resume.py  tools_setup.py
mito_forge/core/: __init__.py
mito_forge/core/agents/: __init__.py  annotation_agent.py  assembly_agent.py  base_agent.py  exceptions.py  orchestrator.py  qc_agent.py  supervisor_agent.py  types.py
mito_forge/core/knowledge/: __init__.py
mito_forge/core/llm/: __init__.py  config_manager.py  env_check.py  factory.py  provider.py  unified_provider.py
mito_forge/graph/: build.py  nodes.py  nodes.py.backup  state.py
mito_forge/reports/: __init__.py  html_generator.py  visualization.py
mito_forge/tools/: __init__.py  medaka.py  pilon.py  racon.py  sources.json
mito_forge/utils/: __init__.py  config.py  exceptions.py  geseq_guide.py  github_downloader.py  i18n.py  logging.py  paired_end_utils.py  report_utils.py  selection.py  tool_env_manager.py  toolcheck.py  tools_manager.py
tests/: __init__.py  test_agents.py  test_agents_rag_mem0_integration.py  test_agents_tool_exec_assembly.py  test_agents_tool_exec_qc.py  test_annotation_cli_llm.py  test_assembly_cli_llm.py  test_base_agent_tool_fallback.py  test_cli.py  test_cli_help_visibility.py  test_cli_i18n.py  test_doctor_external_tools.py  test_doctor_rag_mem0.py  test_doctor_tools_fix.py  test_github_downloader_localfile.py  test_langgraph_pipeline.py  test_llm_fallback_template.py  test_llm_provider_env_check.py  test_nodes_apply_plan_params.py  test_nodes_consumes_tool_plan.py  test_nodes_fallback_candidates.py  test_nodes_refine_from_plan.py  test_pipeline_passes_tool_plan.py  test_pipeline_summary_cli.py  test_pipeline_summary_snapshot.py  test_polishing_integration.py  test_qc_cli_expert.py  test_qc_cli_llm.py  test_rag_mem0.py  test_rag_mem0_integration.py  test_rag_mem0_isolation.py  test_rag_simulate_env.py  test_report_template_utils.py  test_selection_module.py  test_seq_type_detection.py  test_seq_type_option_cli.py  test_supervisor_rag_mem0.py  test_tool_plan_bio_seq_file.py  test_tool_plan_details.py  test_tool_plan_matrix.py  (+2 more)
(+17 files in other folders)
